[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Tutorial.gd" type="Script" id=1]
[ext_resource path="res://TileSets/FloorTile.tres" type="TileSet" id=2]
[ext_resource path="res://TileSets/AutoTileWalls.tres" type="TileSet" id=3]
[ext_resource path="res://Scenes/Door.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Characters/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/VisionMode.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Briefcase.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Exot.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Levels/radial.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Levels/torchmap.png" type="Texture" id=10]
[ext_resource path="res://GFX/Interface/PNG/crossair_blueOutline.png" type="Texture" id=11]
[ext_resource path="res://SFX/message.wav" type="AudioStream" id=12]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 65.0623, 51.1147 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 40.4583, 37.096 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 51.438, 85.1402 )

[node name="Tutorial" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Floors" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 2
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0 )
_sections_unfolded = [ "Collision" ]

[node name="TileMap" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 2
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -131074, 0, 262151, -131073, 0, 524293, -196608, 0, 262146, -196607, 0, 262146, -196606, 0, 262146, -196605, 0, 262146, -196604, 0, 262146, -196603, 0, 262146, -196602, 0, 524292, -196601, 0, 262152, -65538, 0, 393220, -65537, 0, 393221, -131066, 0, 393220, -131065, 0, 393221, -2, 0, 393220, -1, 0, 393221, -65530, 0, 393220, -65529, 0, 393221, 65534, 0, 393220, 65535, 0, 393221, 6, 0, 393220, 7, 0, 458752, 8, 0, 458756, 9, 0, 458756, 10, 0, 458756, 11, 0, 458756, 12, 0, 458756, 13, 0, 458756, 14, 0, 458756, 15, 0, 458756, 16, 0, 458756, 17, 0, 458756, 18, 0, 458756, 19, 0, 458756, 20, 0, 458756, 21, 0, 458756, 22, 0, 458756, 23, 0, 458756, 24, 0, 458756, 25, 0, 458756, 26, 0, 458756, 27, 0, 262152, 131070, 0, 393220, 131071, 0, 393221, 65538, 0, 262144, 65539, 0, 262146, 65540, 0, 262146, 65541, 0, 262146, 65542, 0, 589828, 65543, 0, 458757, 65544, 0, 458757, 65545, 0, 458757, 65546, 0, 458757, 65547, 0, 458757, 65548, 0, 458757, 65549, 0, 458757, 65550, 0, 458757, 65551, 0, 458757, 65552, 0, 458757, 65553, 0, 458757, 65554, 0, 393218, 65555, 0, 458757, 65556, 0, 458757, 65557, 0, 458757, 65558, 0, 458757, 65559, 0, 393217, 65560, 0, 393222, 65561, 0, 393222, 65562, 0, 393222, 65563, 0, 393221, 196606, 0, 393220, 196607, 0, 393221, 131074, 0, 327682, 131090, 0, 327682, 131095, 0, 327687, 131096, 0, 458757, 131097, 0, 458757, 131098, 0, 393217, 131099, 0, 393221, 262142, 0, 393220, 262143, 0, 393221, 196610, 0, 327682, 196617, 0, 262144, 196618, 0, 262146, 196619, 0, 262145, 196626, 0, 327682, 196634, 0, 393220, 196635, 0, 393221, 327677, 0, 327686, 327678, 0, 458755, 327679, 0, 393221, 262146, 0, 262150, 262153, 0, 327682, 262155, 0, 327682, 262161, 0, 262144, 262162, 0, 327681, 262170, 0, 393220, 262171, 0, 393221, 393214, 0, 393220, 393215, 0, 393221, 327685, 0, 262151, 327686, 0, 524293, 327687, 0, 262146, 327688, 0, 262146, 327689, 0, 327681, 327691, 0, 327682, 327697, 0, 327682, 327706, 0, 393220, 327707, 0, 393221, 458750, 0, 393220, 458751, 0, 393221, 393218, 0, 327685, 393221, 0, 393220, 393222, 0, 393221, 393227, 0, 327682, 393233, 0, 327682, 393242, 0, 393220, 393243, 0, 393221, 524286, 0, 393220, 524287, 0, 393221, 458754, 0, 327682, 458757, 0, 393220, 458758, 0, 393221, 458763, 0, 327680, 458764, 0, 262149, 458767, 0, 327686, 458768, 0, 262146, 458769, 0, 327681, 458778, 0, 393220, 458779, 0, 393221, 589822, 0, 393220, 589823, 0, 393221, 524289, 0, 262151, 524290, 0, 458758, 524291, 0, 262152, 524293, 0, 393220, 524294, 0, 393221, 524314, 0, 393220, 524315, 0, 393221, 655358, 0, 393220, 655359, 0, 458752, 589824, 0, 458756, 589825, 0, 458753, 589826, 0, 393222, 589827, 0, 458752, 589828, 0, 458756, 589829, 0, 458753, 589830, 0, 458752, 589831, 0, 458756, 589832, 0, 458756, 589833, 0, 458756, 589834, 0, 458756, 589835, 0, 458756, 589836, 0, 458756, 589837, 0, 458756, 589838, 0, 458756, 589839, 0, 458756, 589840, 0, 458756, 589841, 0, 262152, 589850, 0, 393220, 589851, 0, 393221, 720894, 0, 327687, 720895, 0, 458757, 655360, 0, 458757, 655361, 0, 458757, 655362, 0, 458757, 655363, 0, 458757, 655364, 0, 458757, 655365, 0, 458757, 655366, 0, 458757, 655367, 0, 458757, 655368, 0, 458757, 655369, 0, 458757, 655370, 0, 458757, 655371, 0, 458757, 655372, 0, 458757, 655373, 0, 458757, 655374, 0, 458757, 655375, 0, 458757, 655376, 0, 458757, 655377, 0, 589827, 655386, 0, 393220, 655387, 0, 393221, 720913, 0, 327682, 720922, 0, 393220, 720923, 0, 393221, 786449, 0, 327682, 786458, 0, 393220, 786459, 0, 393221, 851985, 0, 327680, 851986, 0, 262146, 851987, 0, 262146, 851988, 0, 262146, 851989, 0, 262146, 851990, 0, 262146, 851991, 0, 262146, 851992, 0, 262146, 851993, 0, 262146, 851994, 0, 589828, 851995, 0, 327688 )
_sections_unfolded = [ "Collision" ]

[node name="Door" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 159.074, 352.211 )
rotation = 1.5708
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Player" parent="." index="3" instance=ExtResource( 5 )]

position = Vector2( 289.748, -27.0246 )

[node name="VisionMode" parent="." index="4" instance=ExtResource( 6 )]

[node name="BriefCase" parent="." index="5" instance=ExtResource( 7 )]

position = Vector2( 667.877, 326.349 )

[node name="ColorRect" parent="." index="6" instance=ExtResource( 8 )]

margin_left = 1155.0
margin_top = 475.0
margin_right = 2020.0
margin_bottom = 827.0

[node name="Light2D" type="Light2D" parent="." index="7"]

position = Vector2( 77.3473, 20.8715 )
enabled = true
editor_only = false
texture = ExtResource( 9 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Shadow" ]

[node name="Light2D2" type="Light2D" parent="." index="8"]

position = Vector2( 316.281, 362.145 )
rotation = 3.20136
scale = Vector2( 0.5, 0.5 )
enabled = true
editor_only = false
texture = ExtResource( 10 )
offset = Vector2( 320, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Range", "Shadow", "Transform" ]

[node name="ObjectiveMarkers" type="Node2D" parent="." index="9"]

editor/display_folded = true

[node name="MoveObjective" type="Position2D" parent="ObjectiveMarkers" index="0"]

position = Vector2( 60.587, 86.2099 )

[node name="DoorObjective" type="Position2D" parent="ObjectiveMarkers" index="1"]

position = Vector2( 234.4, 361.911 )

[node name="NightvisionObjective" type="Position2D" parent="ObjectiveMarkers" index="2"]

position = Vector2( 504.868, 224.753 )

[node name="LootObjective" type="Position2D" parent="ObjectiveMarkers" index="3"]

position = Vector2( 648.513, 433.467 )

[node name="ExitObjective" type="Position2D" parent="ObjectiveMarkers" index="4"]

position = Vector2( 1402.53, 631.653 )

[node name="ObjectivePointer" type="Sprite" parent="." index="10"]

editor/display_folded = true
position = Vector2( -287.035, 163.85 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="ObjectivePointer" index="0"]

enabled = true
editor_only = false
texture = ExtResource( 11 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1

[node name="ObjectiveAreas" type="Node2D" parent="." index="11"]

[node name="ObjectiveMove" type="Area2D" parent="ObjectiveAreas" index="0"]

editor/display_folded = true
position = Vector2( 63.1748, 94.7622 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/ObjectiveMove" index="0"]

shape = SubResource( 1 )

[node name="ObjectiveDoor" type="Area2D" parent="ObjectiveAreas" index="1"]

editor/display_folded = true
position = Vector2( 229.362, 353.462 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/ObjectiveDoor" index="0"]

shape = SubResource( 2 )

[node name="ObjectiveNightvision" type="Area2D" parent="ObjectiveAreas" index="2"]

editor/display_folded = true
position = Vector2( 516.085, 214.027 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/ObjectiveNightvision" index="0"]

position = Vector2( 0, 8.37802 )
scale = Vector2( 1, 1.09505 )
shape = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="12"]

stream = ExtResource( 12 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Tween" type="Tween" parent="." index="13"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="body_entered" from="BriefCase" to="." method="_on_BriefCase_body_entered"]

[connection signal="body_entered" from="ObjectiveAreas/ObjectiveMove" to="." method="_on_ObjectiveMove_body_entered"]

[connection signal="body_entered" from="ObjectiveAreas/ObjectiveDoor" to="." method="_on_ObjectiveDoor_body_entered"]

[connection signal="body_entered" from="ObjectiveAreas/ObjectiveNightvision" to="." method="_on_ObjectiveNightvision_body_entered"]


